[gd_scene load_steps=20 format=3 uid="uid://bl6jdogdispmk"]

[ext_resource type="Texture2D" uid="uid://cs1h52wpkogdc" path="res://assests/CharacterAssets/NightBorne/NightBorne.png" id="1_605pk"]
[ext_resource type="Script" path="res://Script/Enemy/Enemy.gd" id="1_porm6"]
[ext_resource type="Script" path="res://Script/State/StateMachine.gd" id="3_qk34f"]
[ext_resource type="Script" path="res://Script/Enemy/Idle.gd" id="4_55yab"]
[ext_resource type="AudioStream" uid="uid://co6pm5kw5dtw1" path="res://assests/SoundAssets/sfx/EnemySfx/hit_sfx.mp3" id="5_bcwdd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b672s"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mldu2"]
bg_color = Color(0.85098, 0, 0, 1)

[sub_resource type="Animation" id="Animation_g1qeu"]
resource_name = "Attack1"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(5, 2), Vector2i(5, 2), Vector2i(5, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloseEnemy_AttackBox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_b3oqk"]
resource_name = "Attack2"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(7, 2), Vector2i(7, 2), Vector2i(7, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloseEnemy_AttackBox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.65, 0.75, 0.85, 0.95, 1.05, 1.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_08r4b"]
resource_name = "Chase"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_rloln"]
resource_name = "Death"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(10, 4), Vector2i(11, 4), Vector2i(12, 4), Vector2i(13, 4), Vector2i(14, 4), Vector2i(15, 4), Vector2i(16, 4), Vector2i(17, 4), Vector2i(18, 4), Vector2i(19, 4), Vector2i(22, 4)]
}

[sub_resource type="Animation" id="Animation_4cw2l"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0)]
}

[sub_resource type="Animation" id="Animation_v1bs4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloseEnemy_AttackBox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_667pp"]
resource_name = "Wander"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0tqbc"]
_data = {
"Attack1": SubResource("Animation_g1qeu"),
"Attack2": SubResource("Animation_b3oqk"),
"Chase": SubResource("Animation_08r4b"),
"Death": SubResource("Animation_rloln"),
"Idle": SubResource("Animation_4cw2l"),
"RESET": SubResource("Animation_v1bs4"),
"Wander": SubResource("Animation_667pp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7p1tt"]
radius = 12.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2n0xm"]
radius = 22.0227

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yfcx"]
size = Vector2(150, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ygpu"]
size = Vector2(22, 20)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
collision_layer = 2
script = ExtResource("1_porm6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -10)
texture = ExtResource("1_605pk")
hframes = 23
vframes = 5

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -14.0
offset_top = -19.0
offset_right = 14.0
offset_bottom = -17.0
theme_override_styles/background = SubResource("StyleBoxFlat_b672s")
theme_override_styles/fill = SubResource("StyleBoxFlat_mldu2")
max_value = 10.0
value = 5.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0tqbc")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7p1tt")

[node name="GroundDetctor" type="Node2D" parent="."]

[node name="LeftRayCast" type="RayCast2D" parent="GroundDetctor"]
position = Vector2(-12, 5)
target_position = Vector2(0, 15)

[node name="RightRayCast" type="RayCast2D" parent="GroundDetctor"]
position = Vector2(12, 5)
target_position = Vector2(0, 15)

[node name="WallDetctor" type="Node2D" parent="."]

[node name="LeftRayCast" type="RayCast2D" parent="WallDetctor"]
position = Vector2(-12, 4)
target_position = Vector2(-10, 0)

[node name="RightRayCast" type="RayCast2D" parent="WallDetctor"]
position = Vector2(12, 4)
target_position = Vector2(10, 0)

[node name="Area2DDetctor" type="Node2D" parent="."]

[node name="LeftRayCast" type="RayCast2D" parent="Area2DDetctor"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-12, 5)
target_position = Vector2(-10, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RightRayCast" type="RayCast2D" parent="Area2DDetctor"]
modulate = Color(0, 0, 0, 1)
position = Vector2(12, 5)
target_position = Vector2(10, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="CharacterStateMachine" type="Node" parent="."]
script = ExtResource("3_qk34f")

[node name="Idle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("4_55yab")

[node name="Timer" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(10, 0)
shape = SubResource("CircleShape2D_2n0xm")
debug_color = Color(0.636579, 0.516681, 0.289291, 0.42)

[node name="DetectionArea" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 2

[node name="DetectionCollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(80, -7)
shape = SubResource("RectangleShape2D_0yfcx")
debug_color = Color(0.78713, 0.175724, 0.951804, 0.42)

[node name="CloseEnemy_AttackBox" type="Area2D" parent="." groups=["Enemy_hitbox"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CloseEnemy_AttackBox"]
polygon = PackedVector2Array(-16, -40, 18, -31, 26, -23, 27, -2, 17, 6, -3, 4, -4, 16, 4, 19, 13, 19, 30, 12, 36, 2, 36, -16, 31, -27, 18, -36, 6, -40)
disabled = true

[node name="CloseEnemy_Hitbox" type="Area2D" parent="." groups=["CloseEnemy_Hitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseEnemy_Hitbox"]
shape = SubResource("RectangleShape2D_2ygpu")
debug_color = Color(0, 0.117647, 0.701961, 0.419608)

[node name="Timers" type="Node2D" parent="."]

[node name="Chase_timer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="Idle_timer" type="Timer" parent="Timers"]
wait_time = 8.0

[node name="Idle_Cd_Timer" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="Attack_timer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="Attack_Cd_timer" type="Timer" parent="Timers"]

[node name="OuchFlash_Timer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2(10, -8)
enabled = false
target_position = Vector2(100, 0)
collision_mask = 2

[node name="hit_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bcwdd")
volume_db = 5.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detect_player_body_exited"]
[connection signal="area_entered" from="CloseEnemy_AttackBox" to="." method="_on_attack_box_area_entered"]
[connection signal="body_entered" from="CloseEnemy_AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="area_entered" from="CloseEnemy_Hitbox" to="." method="_on_close_enemy_hitbox_area_entered"]
[connection signal="timeout" from="Timers/Chase_timer" to="." method="_on_chase_timer_timeout"]
[connection signal="timeout" from="Timers/Idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="Timers/Idle_Cd_Timer" to="." method="_on_idle_cd_timer_timeout"]
[connection signal="timeout" from="Timers/Attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/Attack_Cd_timer" to="." method="_on_attack_cd_timer_timeout"]
[connection signal="timeout" from="Timers/OuchFlash_Timer" to="." method="_on_ouch_flash_timer_timeout"]
